--- a/src/app/components/game-header/game-header.component.html
+++ b/src/app/components/game-header/game-header.component.html
@@ -1,1 +1,8 @@
-<p>game-header works!</p>
+<div class="header">
+  <div class="header__gameTitle">
+    ROCK<br />
+    PAPER<br />
+    SCISSORS<br />
+  </div>
+  <rps-game-score />
+</div>
